# bplan

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  bplan.code-workspace  readme.md
cmd/bplan/: main.go
docs/research/: Structure.md  Адміністративно-бюджетний_устрій.md  Адміністративно-територіальний_устрій.md  Підприємництво.md
include/: readme.md
include/UA/: budget.hpp
include/UA/budget/: api.hpp  incomes.hpp
include/UA/budget/expenses/: program.hpp
include/UA/budget/general/: incomes.hpp
include/UA/budget/local/: incomes.hpp
include/UA/budget/local/expenses/: program.hpp
include/bplan/: chrono.hpp  compare.hpp  ctype.hpp  fail.hpp  filesystem.hpp  lenof.hpp  type_traits.hpp
include/bplan/boost/: net.hpp
include/util/: wignore-pop.inl  wignore-push.inl
misc/cmake/: cache.cmake  remove_recurse.cmake
misc/patch/: libconfig_wincompat_mingw.patch
res/testing/: local_2555900000_INCOMES_2023_month.csv  local_2555900000_INCOMES_2023_quarter.csv
src/: app.cpp  app.hpp  config.hpp  main.cpp  runconfig.hpp  settings.hpp  test.cpp  test.hpp
src/app/: DataTreeEditor.cpp  MainViewportMenuBar.cpp  MainWindow.cpp  app.cpp  data.cpp  data.hpp
src/app/data/: budget.cpp  budget.hpp  data.cpp
src/app/data/parse/: csv.hpp
src/app/gui/: MainMenuBar.cpp  MainWindow.cpp
src/conf/: imconfig.h
src/int/: locale.hpp  readme.md
src/int/budget/: sort.hpp
src/int/budget/rapidcsv/: sort.hpp
src/int/budget/rapidcsv/imgui/: imguiDrawEmptyTable.hpp  sort.hpp
src/int/imgui/: tools.hpp
src/int/imgui/forms/: font_viewer.hpp  help_marker.hpp  main_full-window.hpp  main_full-window_top-dockspaced.hpp  main_topfull_window_dockspaced.hpp
src/int/imgui/tools/: align_text.cpp
src/lib/: _src_beast.cpp  src_beast.cpp
src/test/: DemoCityChernihiv.cpp  SkeletonEN.cpp  SkeletonUA.cpp  tests.hpp
src/test/csv/: ConvertCsv.cpp  CsvFilterT.cpp  CsvGet.cpp  CsvGet.hpp  CsvTable.cpp  CsvTable.hpp  read.cpp
src/test/sql/: sqlite_orm.cpp  sqlite_orm.hpp
src/test/sql/sql_server/: odbc_nano.cpp  odbc_nano.hpp  odbc_wrap.cpp  odbc_wrap.hpp
